Finish payment section

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -293,7 +293,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 The program costs £225.  You can choose from several direct debit payment options to best suit you.  The first payment will be on 1st May and each month thereafter until the total is paid. 
             </p>
             <p class="normal-text">
-                Payments are processed with <a href="https://gocardless.com/" target="_blank">GoCardless</a>. Clicking on an option below will take you to the GoCardless registration page where you will complete a registration form.
+                Payments are processed with <a href="https://gocardless.com/" target="_blank">GoCardless</a>. Selecting an option below will take you to the GoCardless registration page where you will complete a registration form.
             </p>
         </div>
         <div class="payment-options-content">
@@ -308,7 +308,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 <form class="form">
                     <div class="inputGroup">
                         <input id="radio1" name="radio" type="radio"/>
-                        <label class="normal-text" for="radio1">1 payment of £225</label>
+                        <label id="label1" class="normal-text" for="radio1">1 payment of £225</label>
                     </div>
                     <div class="inputGroup">
                         <input id="radio2" name="radio" type="radio"/>
@@ -326,7 +326,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                         <input id="radio5" name="radio" type="radio"/>
                         <label class="normal-text" for="radio5">5 payments of £45</label>
                     </div>
-                    <a class="btn-dark-pink sign-me-up-btn bg-blue" href="">Book your spot!</a>
+                    <a id="beingEnoughBtn" class="btn-dark-pink sign-me-up-btn bg-blue" href="">Book your spot!</a>
                 </form>
                 <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice</a></p>
             </div>    
