Add radio button functionality

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -46,9 +46,18 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
 
     <hr class="half-width-hr">
 
-    <div class="circle-img">
-        <img src="../static/img/Mhairi_pics/coat-pull-comp.jpg" alt="Mhairi-on-phone">
-    </div>
+    <!-- video section -->
+    <section class="video-embed-container">
+        <video class="video-embed" controls width="250">
+            <source src="/static/vid/bee-video.mp4"
+                    type="video/webm">
+
+            <source src="/static/vid/bee-video.mp4"
+                    type="video/mp4">
+            Sorry, your browser doesn't support embedded videos.
+        </video>
+    </section>
+    <!-- END: video section -->
 
     <!-- what is it section -->
     <section class="simple-section bg-gray">
