--- a/static/scss/components/_button.scss
+++ b/static/scss/components/_button.scss
@@ -223,6 +223,7 @@ a:focus{outline:0;}
 .sign-me-up-btn{
     background-color: rgba(158,198,179,1);
     text-transform: uppercase;
+    text-decoration: none;
     color: $base-text-color;
     font-size: 1.18em;
     padding: .1em 1em;
