--- a/static/scss/pages/_being_enough.scss
+++ b/static/scss/pages/_being_enough.scss
@@ -1,4 +1,16 @@
 // ---------------------------------------------------------------
+// Video embed section
+// ---------------------------------------------------------------
+
+.video-embed-container{
+
+}
+
+.video-embed{
+    
+}
+
+// ---------------------------------------------------------------
 // Our journey
 // ---------------------------------------------------------------
 
