Edit normal text size on xxl

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -44,18 +44,18 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
     </section>    
     <!-- END: intro section -->
 
-    <hr class="half-width-hr">
-
     <!-- video section -->
-    <section class="video-embed-container">
-        <video class="video-embed" controls width="250">
-            <source src="/static/vid/bee-video.mp4"
-                    type="video/webm">
+    <section class="video-section">
+        <div class="video-embed-container">
+            <video class="video-embed" controls width="250">
+                <source src="/static/vid/being-enough-intro.mp4"
+                        type="video/webm">
 
-            <source src="/static/vid/bee-video.mp4"
-                    type="video/mp4">
-            Sorry, your browser doesn't support embedded videos.
+                <source src="/static/vid/being-enough-intro.mp4"
+                        type="video/mp4">
+                Sorry, your browser doesn't support embedded videos.
         </video>
+        </div>
     </section>
     <!-- END: video section -->
 
@@ -310,7 +310,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 <h3 class="sect-subtitle fw-b">Payment plans</h3>
                 <div class="payment-figure">
                     <div class="payment-figure-content bg-blue fw-b">
-                        <p class="sect-subtitle m-0">£225</p>
+                        <p class="sect-subtitle being-enough-price m-0">£225</p>
                         <p class="normal-text m-0">Payment options below</p>
                     </div>
                 </div>
@@ -335,7 +335,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                         <input id="radio5" name="radio" type="radio"/>
                         <label class="normal-text" for="radio5">5 payments of £45</label>
                     </div>
-                    <a id="beingEnoughBtn" class="btn-dark-pink sign-me-up-btn bg-blue" href="">Book your spot!</a>
+                    <a id="beingEnoughBtn" class="btn-dark-pink sign-me-up-btn bg-blue" href="" target="_blank">Book your spot!</a>
                 </form>
                 <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice</a></p>
             </div>    
