Adjust hero image being enough

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -6,20 +6,19 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
 
 ---
 
-    <!-- hero section -->
-    <section class="home-hero container-fluid p-0">
-        <div class="home-hero-img hero-showing">
-            <img src="/static/img/Mhairi_pics/home_hero_comp.jpg" alt="mhairi-life-coach-in-black-coat">
-        </div>
-        <div class="home-hero-img">
-            <img src="/static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
-        </div>
-        <div class="home-hero-text">
-            <p class="hero-text first-hero-text" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1500">Being Enough</p>
-            <p class="hero-text second-hero-text" data-aos="fade-left" data-aos-delay="300" data-aos-offset="100" data-aos-duration="1500">The 6 week program</p>
+    <!-- Parralex hero section -->
+    <section class="being-enough-hero-container">
+        <div class="parallax-container contact-hero-parallax-window"></div>
+        <div class="being-enough-hero-parallax">
+            <h1 class="sect-title">
+                Being Enough
+            </h1>
+            <h2 class="sect-subtitle">
+                The 6 Week Program
+            </h2>
         </div>
     </section>
-    <!-- END: hero section -->
+    <!-- END: parralex hero section -->
 
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
@@ -32,13 +31,13 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 I know how hard it is when your best never feels good enough. Your successes feel like luck and the pressure of ‘getting it right’ is so overwhelming it can stop you taking any action at all. 
             </p>
             <p class="normal-text">
-                How do I know?  Because I was you.  I found out the hard way that the first step in radically transforming your life is not only admitting to yourself that you're not living the life you want but also and perhaps more importantly, acknowledging that you need to take action.
+                I know this because I’ve been there.  I found out the hard way that the first step in radically transforming your life is not only admitting that you're not living the life you want but also and perhaps more importantly, acknowledging that you need to take action to change it.
             </p>
             <p class="normal-text">
-                The good news is from where I’m sitting, you are already halfway there my lovely!
+                The good news is, youre reading this now so you are already halfway there my lovely!
             </p>
             <p class="normal-text">
-                So grab a cup of coffee (and a biscuit) and enjoy this short video introduction of what you can expect.
+                Grab a cup of coffee (and a biscuit) and enjoy this short video introduction of what you can expect.
             </p>
         </div>
     </section>    
@@ -69,13 +68,29 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 A 6 week LIVE coaching journey where we will cover the absolute essentials to get you from never enough to a full cup. 
             </p>
             <p class="normal-text">
-                In 2018 I identified what was holding me back, I felt like I wasn’t good enough; at my job, in my relationships, for my family, in life in general. Though logically I could see that was potentially unfair, it didn't help. 
+                In 2018 I identified what was holding me back; I believed I wasn’t good enough. Though logically I could see that was potentially unfair, it didn't help. 
             </p>
             <p class="normal-text">
-                What radically changed my life? Giving myself time and attention.  Doing the deep, transformative inner work.   Putting my focus and energy into the right place to build the trust where it mattered most, in myself. 
+                It was a bumpy road but I eventually figured out the steps to transform.  Let me share them with you: 
             </p>
+            <div class="intro-list">
+                <ul class="workshop-includes-list normal-text">
+                    <li class="workshop-includes-item">
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">Give yourself time and attention.</span>
+                    </li>
+                    <li class="workshop-includes-item">
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">Do the deep, transformative inner work.</span>
+                    </li>
+                    <li class="workshop-includes-item">
+                        <i class="far fa-check-circle"></i>
+                        <span class="workshop-includes-item-text">Put focus and energy into the right place and build the trust where it matters most, within you.</span>
+                    </li>
+                </ul>
+            </div>
             <p class="normal-text">
-                That is why I have created this program with the intention of helping you stand in your own worth.  Unlock the parts of you that may be limiting or blocking your joy and be guided to navigate those so you can say: <span class="fw-b">I am enough.</span> 
+                With that intention I have created this program to help you stand in your own worth, unlock the parts of you limiting your joy and be guided to navigate those so you can finally say: <span class="fw-b">I am enough.</span> 
             </p>
         </div>
     </section>
@@ -107,7 +122,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 <ul class="workshop-includes-list normal-text">
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">What we resist, persists: we will carefully and compassionately identify the buried beliefs that are diminishing your self worth.</span>
+                        <span class="workshop-includes-item-text">What we resist, persists: Carefully and compassionately identify the buried beliefs that are diminishing your self worth.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
@@ -141,7 +156,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">Build even more self belief and self trust to allow you to tune in and find alignment.</span>
+                        <span class="workshop-includes-item-text">Build even more self belief and self trust to allow you to show up for yourself in new ways.</span>
                     </li>
                 </ul>
             </div>
