--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -64,10 +64,13 @@
                     <a href="#" class="dropdown-toggle nav-item rob-font" data-toggle="dropdown">Events</a>
                     <div class="dropdown-menu nav-item rob-font">
                         <div class="dropdown-item">
-                            <a href="/opening-workshop" class="">2021 Opening Workshop</a>
+                            <a href="/being-enough" class="">Being Enough Group <br class="d-lg-none">Program</a>
                         </div>
                         <div class="dropdown-item">
                             <a href="/confidence-collective-workshop" class="">Confidence Collective <br class="d-lg-none"> Workshop</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="/opening-workshop" class="">2021 Opening Workshop</a>
                         </div>
                     </div>
                 </div>
