Add scrolll to payment

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -53,8 +53,9 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 <source src="/static/vid/being-enough-intro.mp4"
                         type="video/mp4">
                 Sorry, your browser doesn't support embedded videos.
-        </video>
+            </video>
         </div>
+        <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Sign me up!</a>
     </section>
     <!-- END: video section -->
 
@@ -183,6 +184,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 </ul>
             </div>    
         </div>
+        <a class="btn-dark-pink services-cta-btn bg-red" href="#paymentSection">Sign me up!</a>
     </section>
     <!-- END: our journey section-->
 
@@ -308,7 +310,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
     <!-- END: added value section -->
 
     <!-- payments options -->
-    <section class="payment-options">
+    <section id="paymentSection" class="payment-options">
         <h2 class="sect-title how-title">
             The Investment Options
         </h2>
