--- a/static/scss/pages/_about.scss
+++ b/static/scss/pages/_about.scss
@@ -1401,9 +1401,10 @@
     display: inline-block;
     margin: auto;
     bottom: 0;
+    width: auto;
     padding: .5em 1.5em;
     @media #{$breakpoint-sm} {
-        width: 18em;
+       
     }
     // @media #{$breakpoint-lg} {
     //     width: 270px;
