Add new colors to our journey

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -28,13 +28,13 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
         <hr class="half-width-hr">
                 <div class="simple-section-text">
             <p class="normal-text">
-                I know how hard it is when your best never feels good enough. Your successes feel like luck and the pressure of ‘getting it right’ is so overwhelming it can stop you taking any action at all. 
+                I know how hard it is when your best is never good enough. Your successes feel like luck and the pressure of ‘getting it right’ is so overwhelming it can stop you doing anything at all.
             </p>
             <p class="normal-text">
                 I know this because I’ve been there.  I found out the hard way that the first step in radically transforming your life is not only admitting that you're not living the life you want but also and perhaps more importantly, acknowledging that you need to take action to change it.
             </p>
             <p class="normal-text">
-                The good news is, youre reading this now so you are already halfway there my lovely!
+                The good news is, you're reading this now so you are already halfway there my lovely!
             </p>
             <p class="normal-text">
                 Grab a cup of coffee (and a biscuit) and enjoy this short video introduction of what you can expect.
@@ -91,7 +91,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 </ul>
             </div>
             <p class="normal-text">
-                With that intention I have created this program to help you stand in your own worth, unlock the parts of you limiting your joy and be guided to navigate those so you can finally say: <span class="fw-b">I am enough.</span> 
+                It's with that intention I have created this program. To help you stand in your own worth, unlock the parts of you limiting your joy and be guided to navigate those so you can finally say: <span class="fw-b">I am enough.</span> 
             </p>
         </div>
     </section>
@@ -123,7 +123,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 <ul class="workshop-includes-list normal-text">
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">What we resist, persists: Carefully and compassionately identify the buried beliefs that are diminishing your self worth.</span>
+                        <span class="workshop-includes-item-text">Carefully and compassionately identify the buried beliefs that are diminishing your self worth.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
@@ -216,7 +216,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
         </h2>
         <div class="home-about who-is-it-for">
             <div class="who-is-it-for-img">
-                <img src="../static/img/Mhairi_pics/laughing-comp.jpg" alt="mhairi-life-coach-walking-away">
+                <img src="../static/img/Mhairi_pics/laughing-at-phone.jpg" alt="mhairi-life-coach-walking-away">
             </div>
             <div class="home-about-text">
                 <div class="when-how-item">
@@ -233,7 +233,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 </div>
                 <div class="when-how-item">
                     <span class="home-about-subtitle pink-text">When? </span>
-                    <p class="normal-text">Kickstart opening ritual on Sunday 2nd May 8pm. There after every Wednesday evening at 8pm LIVE.</p>
+                    <p class="normal-text">Kickstart opening ritual on Monday 3rd May 8pm. There after every Wednesday evening at 8pm LIVE.</p>
                     <p class="normal-text">We will spend a delightful 6 weeks together!</p>
                 </div>
             </div>
@@ -245,7 +245,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
     <section class="why-mhairi when-how">
         <div class="why-mhairi-content when-how-content">
             <div class="home-about-img">
-                <img src="/static/img/Mhairi_pics/sitting_yellow_coat_comp.jpg" alt="mhairi-life-coach-yellow-coat">
+                <img src="/static/img/Mhairi_pics/walking-away-looking-away.jpg" alt="mhairi-life-coach-yellow-coat">
             </div>
             <div class="home-about-text">
                 <div class="when-how-item">
