Add spacing in when-how

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -262,7 +262,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                     </ul>
                 </div>
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">Psst..</span>
+                    <span class="home-about-subtitle pink-text mb-2">Psst..</span>
                     <p class="normal-text">
                         Can’t make a live session?  No worries. All sessions will be recorded and emailed out the following day so you can dip in and out as you need to. 
                     </p>
@@ -316,7 +316,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
-                The program costs £225.  You can choose from several direct debit payment options to best suit you.  The first payment will be on 1st May and each month thereafter until the total is paid. 
+                The program costs £225.  You can choose from several direct debit payment options to best suit you.  The first payment will be on 30th April and each month thereafter until the total is paid. 
             </p>
             <p class="normal-text">
                 Payments are processed with <a href="https://gocardless.com/" target="_blank">GoCardless</a>. Selecting an option below will take you to the GoCardless registration page where you will complete a registration form.
