--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -31,13 +31,13 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                 I know how hard it is when your best is never good enough. Your successes feel like luck and the pressure of ‘getting it right’ is so overwhelming it can stop you doing anything at all.
             </p>
             <p class="normal-text">
-                I know this because I’ve been there.  I found out the hard way that the first step in radically transforming your life is not only admitting that you're not living the life you want but also and perhaps more importantly, acknowledging that you need to take action to change it.
+                I know this because I’ve been there.
             </p>
             <p class="normal-text">
-                The good news is, you're reading this now so you are already halfway there my lovely!
+                The good news is, you’re reading this now which is a step in the right direction. 
             </p>
             <p class="normal-text">
-                Grab a cup of coffee (and a biscuit) and enjoy this short video introduction of what you can expect.
+                Now grab a cup of coffee (and a biscuit) babes and let me tell you in this short video how to continue your journey to ‘Being Enough”.
             </p>
         </div>
     </section>    
